--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@
 name = "xx"
 version = "0.2.0"
 edition = "2021"
+authors = ["Jeff Dickey (@jdx)"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+miette = "5"
+thiserror = "1"
+
+[dev-dependencies]
+once_cell = "1.19.0"
+pretty_assertions = "1"
+tempfile = "3"
