added test mutex

--- a/.mise.toml
+++ b/.mise.toml
@@ -3,7 +3,10 @@ tasks.build-release = "cargo build --all --release"
 tasks.format = "cargo fmt -- --all"
 tasks.format-check = "cargo fmt --all --check"
 tasks.lint = "cargo clippy --all -- -D warnings"
-tasks.test = "cargo test --all"
+
+[tasks.test]
+run = "cargo test --all"
+depends = ['build']
 
 [tasks.ci]
 depends = ["build", "lint", "format-check", "test"]
