--- a/.mise.toml
+++ b/.mise.toml
@@ -3,6 +3,7 @@ tasks.build-release = "cargo build --all --release"
 tasks.format = "cargo fmt -- --all"
 tasks.format-check = "cargo fmt --all --check"
 tasks.lint = "cargo clippy --all -- -D warnings"
+tasks.release = "cargo release"
 
 [tasks.test]
 run = "cargo test --all"
