--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ repository = "https://github.com/jdx/xx"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-miette = "6"
+miette = "7"
 thiserror = "1"
 log = "0.4"
+regex = "1"
 
 [dev-dependencies]
 once_cell = "1.19.0"
