--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ miette = "5"
 thiserror = "1"
 log = "0.4"
 regex = "1"
+filetime = "0.2"
+duct = "0.13"
 
 [dev-dependencies]
-once_cell = "1.19.0"
+once_cell = "1"
 pretty_assertions = "1"
 tempfile = "3"
