--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,24 @@ repository = "https://github.com/jdx/xx"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-miette = "5"
-thiserror = "1"
-log = "0.4"
-regex = "1"
-filetime = "0.2"
+bzip2 = { version = "0.4", optional = true }
 duct = "0.13"
+filetime = "0.2"
+flate2 = { version = "1", optional = true }
+log = "0.4"
+miette = "5"
+regex = "1"
+tar = { version = "0.4", optional = true }
+thiserror = "1"
+xz = { version = "0.1", optional = true }
+zip = { version = "1", optional = true }
+
+[features]
+archive = ["archive_untar_bzip2", "archive_untar_gzip", "archive_untar_xz", "archive_unzip"]
+archive_untar_bzip2 = ["tar", "bzip2"]
+archive_untar_gzip = ["tar", "flate2"]
+archive_untar_xz = ["tar", "xz"]
+archive_unzip = ["zip"]
 
 [dev-dependencies]
 once_cell = "1"
