--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bzip2 = { version = "0.4", optional = true }
 duct = "0.13"
 filetime = "0.2"
 flate2 = { version = "1", optional = true }
+globwalk = { version = "0.9", optional = true }
 log = "0.4"
 miette = "5"
 regex = "1"
@@ -29,6 +30,7 @@ archive_untar_bzip2 = ["tar", "bzip2"]
 archive_untar_gzip = ["tar", "flate2"]
 archive_untar_xz = ["tar", "xz"]
 archive_unzip = ["zip"]
+glob = ["globwalk"]
 
 [dev-dependencies]
 once_cell = "1"
