--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: jdx/mise-action@v2
       - run: mise r ci
       - uses: codacy/codacy-coverage-reporter-action@v1
+        continue-on-error: true
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: coverage.lcov
