--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bzip2 = { version = "0.4", optional = true }
 duct = "0.13"
 filetime = "0.2"
 flate2 = { version = "1", optional = true }
+fslock = { version = "0.2", optional = true }
 globwalk = { version = "0.9", optional = true }
 homedir = "0.3"
 log = "0.4"
