chore: add hash as dependency of fslock

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ archive_untar_bzip2 = ["tar", "bzip2"]
 archive_untar_gzip = ["tar", "flate2"]
 archive_untar_xz = ["tar", "xz2"]
 archive_unzip = ["zip"]
+fslock = ["dep:fslock", "hash"]
 glob = ["globwalk"]
 hash = ["sha2"]
 http = ["reqwest", "tokio"]
