--- a/mise.toml
+++ b/mise.toml
@@ -30,6 +30,9 @@ env = { RUST_LOG = "xx=trace" }
 [tasks.ci]
 depends = ["build", "lint", "coverage"]
 
+[tasks.pre-commit]
+depends = ["lint", "test"]
+
 [env]
 RUST_TEST_THREADS = '1'
 
