--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,3 +50,6 @@ once_cell = "1"
 pretty_assertions = "1"
 tempfile = "3"
 test-log = "0.2"
+
+[package.metadata.release]
+pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
