--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ once_cell = "1"
 pretty_assertions = "1"
 tempfile = "3"
 test-log = "0.2"
+wiremock = "0.6"
 
 [package.metadata.release]
 pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
