feat: add ungz method for gzip decompression
- Add ungz function to decompress .gz files to specified destination
- Add archive_ungz feature flag for conditional compilation
- Add comprehensive unit test for ungz functionality
- Update Cargo.toml to include archive_ungz in archive features
- Update error handling to support archive_ungz feature
- Maintain consistency with existing archive module patterns

The ungz method provides a simple interface to decompress gzip files,
complementing the existing tar.gz, tar.bz2, tar.xz and zip archive
handling functions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,11 @@ xz2 = { version = "0.1", optional = true, features = ["static"] }
 zip = { version = "3", optional = true }
 
 [features]
-archive = ["archive_untar_bzip2", "archive_untar_gzip", "archive_untar_xz", "archive_unzip"]
+archive = ["archive_untar_bzip2", "archive_untar_gzip", "archive_untar_xz", "archive_unzip", "archive_ungz"]
 archive_untar_bzip2 = ["tar", "bzip2"]
 archive_untar_gzip = ["tar", "flate2"]
 archive_untar_xz = ["tar", "xz2"]
+archive_ungz = ["flate2"]
 archive_unzip = ["zip"]
 fslock = ["dep:fslock", "hash"]
 glob = ["globwalk"]
