fix: use cargo-msrv command directly instead of cargo subcommand
The cargo msrv subcommand is not properly registered, so we need to
call cargo-msrv directly.

--- a/.github/workflows/msrv.yml
+++ b/.github/workflows/msrv.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Install cargo-msrv
         run: cargo binstall --no-confirm cargo-msrv
       - name: Verify MSRV
-        run: cargo msrv verify
+        run: cargo-msrv verify
