--- a/.github/workflows/msrv.yml
+++ b/.github/workflows/msrv.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
       - uses: Swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 # v2
-      - uses: cargo-bins/cargo-binstall@main
-      - name: Install cargo-msrv
-        run: cargo binstall --no-confirm cargo-msrv
+      - uses: jdx/mise-action@v2
+        with:
+          install: cargo-msrv
       - name: Verify MSRV
         run: cargo-msrv verify
