fix: correct mise-action install parameter and add cargo-msrv to tools
- Changed install parameter from string to boolean in msrv.yml workflow
- Added cargo-msrv to mise.toml tools for MSRV verification

--- a/mise.toml
+++ b/mise.toml
@@ -25,5 +25,6 @@ RUST_TEST_THREADS = '1'
 
 [tools]
 "cargo:cargo-llvm-cov" = "latest"
+"cargo:cargo-msrv" = "latest"
 hk = "1.12.0"
 pkl = "latest"
