--- a/.github/workflows/msrv.yml
+++ b/.github/workflows/msrv.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: Swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 # v2
       - uses: jdx/mise-action@v2
         with:
-          install: cargo-msrv
+          install: true
       - name: Verify MSRV
         run: cargo-msrv verify
