feat: use mise for all cargo tool management
- Add cargo-binstall to mise.toml tools
- Remove cargo-bins/cargo-binstall action from test workflow
- Use mise-action with install: true to handle all tool installation

--- a/mise.toml
+++ b/mise.toml
@@ -24,6 +24,7 @@ depends = ["lint", "test"]
 RUST_TEST_THREADS = '1'
 
 [tools]
+"cargo:cargo-binstall" = "latest"
 "cargo:cargo-llvm-cov" = "latest"
 "cargo:cargo-msrv" = "latest"
 hk = "1.12.0"
