fix: use cargo-msrv command directly instead of cargo subcommand (#111)
* fix: use cargo-msrv command directly instead of cargo subcommand

The cargo msrv subcommand is not properly registered, so we need to
call cargo-msrv directly.

* ci: use mise-action to install cargo-msrv

* fix: correct mise-action install parameter and add cargo-msrv to tools

- Changed install parameter from string to boolean in msrv.yml workflow
- Added cargo-msrv to mise.toml tools for MSRV verification

* feat: use mise for all cargo tool management

- Add cargo-binstall to mise.toml tools
- Remove cargo-bins/cargo-binstall action from test workflow
- Use mise-action with install: true to handle all tool installation

* fix: use correct cargo-binstall tool reference

Remove cargo: prefix from cargo-binstall as it's a standalone tool, not installed via cargo

--- a/mise.toml
+++ b/mise.toml
@@ -24,6 +24,8 @@ depends = ["lint", "test"]
 RUST_TEST_THREADS = '1'
 
 [tools]
+cargo-binstall = "latest"
 "cargo:cargo-llvm-cov" = "latest"
+"cargo:cargo-msrv" = "latest"
 hk = "1.12.0"
 pkl = "latest"
